# touch

./: .gitignore  azure-pipelines.yml
binding/: export.def  plugin.h  touch.cpp
cmake/: android.cmake  appveyor.cmake  imx6qwin.cmake  linux.cmake  msvc.cmake  travis.cmake
cmake/modules/: FindNSIS.cmake
generate/: CMakeLists.txt
generate/binding/: CMakeLists.txt
generate/test/: CMakeLists.txt
modules/: copy.js  package.json  tsconfig.json
modules/src/: index.ts  tsconfig.json
modules/test/: base.test.ts
modules/touch/: index.js
src/: touch.cpp  touch.h
test/: deploy_arm.bat  run.sh
test/touch/: index.js
