CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(touch )
set(CMAKE_USE_RELATIVE_PATHS ON)

set(PROJECT_SOURCE_DIR "${PROJECT_SOURCE_DIR}/..")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/binary/lib)


set_property(GLOBAL PROPERTY USE_FOLDERS ON) 

# ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(binding)
